Add webblast:getEntry command